--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,17 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.1",
     "@mui/x-data-grid": "^7.23.3",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "numeral": "^2.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "recharts": "^2.15.0",
+    "redux-persist": "^6.0.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
